--- a/.github/ruby.yml
+++ b/.github/ruby.yml
@@ -7,7 +7,10 @@
 
 name: Publish Website
 
-on: workflow_dispatch
+on:
+  push:
+    paths:
+      - '.github/workflows/ruby.yaml'      
 
 jobs:
   deploy:
@@ -19,8 +22,6 @@ jobs:
         ruby: [2.7]
     runs-on: ${{ matrix.os }}
     env:
-      SFTP_ENABLED: ${{ secrets.SFTP_ENABLED }}
-      RSYNC_ENABLED: ${{ secrets.RSYNC_ENABLED }}
 
     steps:
       - name: Checkout
