--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,36 +1,31 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
-# For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
-
 name: Publish Website
 
 on: 
   workflow_dispatch:
-  push:   
+  push:
 
 jobs:
-  deploy:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-        ruby: [2.7]
-    runs-on: ${{ matrix.os }}
-  
-
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      ruby-version: '3.2'
     steps:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2'
           bundler-cache: true
-      - run: |
-          bundle exec jekyll build --future
 
+  deploy:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ needs.setup.outputs.ruby-version }}
+          bundler-cache: true
+      - run: bundle exec jekyll build --future
       - name: Deploy Website to live via SFTP
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
         with:
@@ -41,16 +36,15 @@ jobs:
           sftp_only: true
           ssh_private_key: ${{ secrets.SFTP_SSH_PRIVATE_KEY }}
           sftpArgs: -C
-      # 
-      # 
-      # - name: Decache Cloudflare
-      #   env:
-      #     ELIATRA_CLOUDFLARE_ZONEID: ${{ secrets.ELIATRA_CLOUDFLARE_ZONEID }}
-      #     ELIATRA_CLOUDFLARE_DECACHE_TOKEN: ${{ secrets.ELIATRA_CLOUDFLARE_DECACHE_TOKEN }}
-      #   run: >-
-      #     curl 
-      #     -X POST "https://api.cloudflare.com/client/v4/zones/$ELIATRA_CLOUDFLARE_ZONEID/purge_cache" 
-      #     -H "Authorization: Bearer $ELIATRA_CLOUDFLARE_DECACHE_TOKEN" 
-      #     -H "Content-Type: application/json" 
-      #     --data '{"purge_everything":true}'
 
+  decache:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Decache Cloudflare
+        run: >-
+          curl 
+          -X POST "https://api.cloudflare.com/client/v4/zones/$ELIATRA_CLOUDFLARE_ZONEID/purge_cache" 
+          -H "Authorization: Bearer $ELIATRA_CLOUDFLARE_DECACHE_TOKEN" 
+          -H "Content-Type: application/json" 
+          --data '{"purge_everything":true}'
