Workflow for docs website

--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -3,16 +3,18 @@ name: Publish Website eoed-docs.eliatra.com
 on: 
   workflow_dispatch:
   push:
+    2.11.x-ee
+  pull_request:
 
 env:
   WEBSITE_URL: 'https://eoed-docs.eliatra.com' 
-
 
 jobs:
   setup:
     runs-on: ubuntu-latest
     outputs:
       ruby-version: '3.2'
+    if: github.event_name != 'pull_request'
     steps:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
@@ -31,17 +33,18 @@ jobs:
           bundler-cache: true
       - name: Update _config.yml
         run: |
-          sed -i '/^url:/c\url: "{{ env.WEBSITE_URL }}"' _config.yml        
+          sed -i '/^url:/c\url: "${{ env.WEBSITE_URL }}"' _config.yml        
       - run: bundle exec jekyll build --future
       - uses: actions/upload-artifact@v4
         with:
           name: site-artifacts
           path: _site
           retention-days: 7
-  
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -53,7 +56,7 @@ jobs:
           username: ${{ secrets.SFTP_USERNAME }}
           server: ${{ secrets.SFTP_SERVER }}
           local_path: '_site/*'
-          remote_path: '/var/www/{{ env.WEBSITE_URL }}/html/'
+          remote_path: '/var/www/${{ env.WEBSITE_URL }}/html/'
           sftp_only: true
           ssh_private_key: ${{ secrets.SFTP_SSH_PRIVATE_KEY }}
           sftpArgs: -C
@@ -61,6 +64,7 @@ jobs:
   post_deploy:
     needs: deploy
     runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
     steps:
       - name: Purge Cloudflare Cache
         run: | 
