--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -63,21 +63,21 @@ jobs:
           echo "Start SFTP upload"
           lftp -u ${{ secrets.SFTP_USERNAME }}, -e "set sftp:connect-program 'ssh -a -x  -o StrictHostKeyChecking=no'; mirror  --reverse --parallel=20 --verbose _site/ /var/www/${{ env.WEBSITE_URL }}/html/; quit" sftp://52.30.226.239
           
-  post_deploy:
-    needs: deploy
-    runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request'
-    steps:
-      - name: Purge Cloudflare Cache
-        run: | 
-          STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" \
-            -X POST "https://api.cloudflare.com/client/v4/zones/${{ secrets.ELIATRA_CLOUDFLARE_ZONEID }}/purge_cache" \
-            -H "Authorization: Bearer ${{ secrets.ELIATRA_CLOUDFLARE_DECACHE_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            --data '{"purge_everything":true}')
-          if [ "$STATUS_CODE" -ne 200 ]; then
-            echo "Cloudflare API call failed with status $STATUS_CODE"
-            exit 1
-          else
-            echo "Cloudflare cache purged successfully"
-          fi
+  # post_deploy:
+  #   needs: deploy
+  #   runs-on: ubuntu-latest
+  #   if: github.event_name != 'pull_request'
+  #   steps:
+  #     - name: Purge Cloudflare Cache
+  #       run: | 
+  #         STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" \
+  #           -X POST "https://api.cloudflare.com/client/v4/zones/${{ secrets.ELIATRA_CLOUDFLARE_ZONEID }}/purge_cache" \
+  #           -H "Authorization: Bearer ${{ secrets.ELIATRA_CLOUDFLARE_DECACHE_TOKEN }}" \
+  #           -H "Content-Type: application/json" \
+  #           --data '{"purge_everything":true}')
+  #         if [ "$STATUS_CODE" -ne 200 ]; then
+  #           echo "Cloudflare API call failed with status $STATUS_CODE"
+  #           exit 1
+  #         else
+  #           echo "Cloudflare cache purged successfully"
+  #         fi
