--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: OpenSearch Documentation
+title: Eliatra OpenSearch Enterprise Distro Documentation
 description: >- # this means to ignore newlines until "baseurl:"
-  Documentation for OpenSearch, the Apache 2.0 search, analytics, and visualization suite with advanced security, alerting, SQL support, automated index management, deep performance analysis, and more.
+  Documentation for Eliatra OpenSearch Enterprise Distro Documentation
 baseurl: "/docs/latest" # the subpath of your site, e.g. /blog
 url: "https://opensearch.org" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:path/
 
-opensearch_version: '2.11.1'
-opensearch_dashboards_version: '2.11.1'
-opensearch_major_minor_version: '2.11'
+opensearch_version: '2.11.1-ee1'
+opensearch_dashboards_version: '2.11.1-ee1'
+opensearch_major_minor_version: '2.11-ee'
 lucene_version: '9_7_0'
 
 # Build settings
