--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   WEBSITE_URL: 'eoed-docs.eliatra.com' 
+  WEBSITE_VERSION: 'latest' 
 
 jobs:
   setup:
@@ -32,8 +33,10 @@ jobs:
           bundler-cache: true
       - name: Update _config.yml
         run: |
-          sed -i '/^url:/c\url: "https://${{ env.WEBSITE_URL }}"' _config.yml        
-      - run: JEKYLL_FATAL_LINK_CHECKER=internal bundle exec jekyll build --future
+          sed -i '/^url:/c\url: "https://${{ env.WEBSITE_URL }}"' _config.yml 
+          sed -i '/^baseurl:/c\baseurl: "/docs/${{ env.WEBSITE_VERSION }}"' _config.yml 
+          cat _config.yml|grep -e "^url:" -e "^baseurl:"
+      - run:  JEKYLL_FATAL_LINK_CHECKER=internal bundle exec jekyll build --future
       - uses: actions/upload-artifact@v4
         with:
           name: site-artifacts
@@ -61,7 +64,7 @@ jobs:
           sudo apt install lftp -y
           lftp --version
           echo "Start SFTP upload"
-          lftp -u ${{ secrets.SFTP_USERNAME }}, -e "set sftp:connect-program 'ssh -a -x  -o StrictHostKeyChecking=no'; mirror  --reverse --parallel=20 --verbose _site/ /var/www/${{ env.WEBSITE_URL }}/html/; quit" sftp://${{ secrets.SFTP_SERVER }}
+          lftp -u ${{ secrets.SFTP_USERNAME }}, -e "set sftp:connect-program 'ssh -a -x  -o StrictHostKeyChecking=no';  mkdir -p /var/www/${{ env.WEBSITE_URL }}/html/${{ env.WEBSITE_VERSION }}; mirror  --reverse --parallel=20 --verbose _site/ /var/www/${{ env.WEBSITE_URL }}/html/${{ env.WEBSITE_VERSION }}/; quit" sftp://52.30.226.239
           
   post_deploy:
     needs: deploy
