--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -3,8 +3,8 @@ name: Publish Website eoed-docs.eliatra.com
 on: 
   workflow_dispatch:
   push:
-     branches:
-       - 1.3.x-ee
+     # branches:
+     #   - 1.3.x-ee
   pull_request:
 
 env:
