--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -3,8 +3,8 @@ name: Publish Website eoed-docs.eliatra.com
 on: 
   workflow_dispatch:
   push:
-     branches:
-       - 1.3.x-ee
+     # branches:
+     #   - 1.3.x-ee
   pull_request:
 
 env:
@@ -41,7 +41,7 @@ jobs:
           echo "version=$WEBSITE_VERSION" >> $GITHUB_OUTPUT
           sed -i '/^baseurl:/c\baseurl: "/docs/'"$WEBSITE_VERSION"'"' _config.yml 
           cat _config.yml|grep -e "^url:" -e "^baseurl:"
-      - run:  bundle exec jekyll build --future
+      - run:  JEKYLL_ENV=production bundle exec jekyll build --future
       - uses: actions/upload-artifact@v4
         with:
           name: site-artifacts
