--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,23 +3,17 @@ columns:
     title: 'Get Involved'
     links:
       -
-        title: Code of Conduct
-        url: '/codeofconduct.html'
-      -
         title: 'Forum'
-        url: 'https://forum.opensearch.org/'
+        url: 'https://forum.eliatra.com/'
       -
         title: 'Github'
-        url: 'https://github.com/opensearch-project'
-      -
-        title: 'Slack'
-        url: '/slack.html'
+        url: 'https://github.com/eliatra-opensearch-enterprise-distro'
   -
     title: 'Resources'
     links:
       - 
         title: About
-        url: '/about.html'
+        url: 'https://eliatra.com/company/'
       - 
         title: Release Schedule
         url: '/releases.html'
@@ -29,33 +23,9 @@ columns:
       - 
         title: FAQ
         url: '/faq/'
-      -
-        title: 'Testimonials'
-        url: '/testimonials/'
-      -
-        title: 'Trademark and Brand Policy'
-        url: '/trademark-brand-policy.html'
-      -
-        title: 'Privacy'
-        url: 'https://aws.amazon.com/privacy/'
   -
     title: 'Contact Us'
     links:
       -
         title: 'Connect'
-        url: '/connect.html'
-      -
-        title: 'Twitter'
-        url: 'https://twitter.com/OpenSearchProj'
-      -
-        title: 'LinkedIn'
-        url: 'https://www.linkedin.com/company/opensearch-project/'
-      -
-        title: 'YouTube'
-        url: 'https://www.youtube.com/c/OpenSearchProject'
-      -
-        title: 'Meetup'
-        url: 'https://www.meetup.com/pro/opensearchproject/'
-      -
-        title: 'Facebook'
-        url: 'https://www.facebook.com/OpenSearchProject/'
+        url: 'https://eliatra.com/contact/'
