--- a/_data/top_nav.yml
+++ b/_data/top_nav.yml
@@ -1,42 +1,10 @@
 items:
   -
-    label: OpenSearchCon
-    fragments: 
-      - opensearchcon
-      - sessions
-      - speakers
-      - exhibitors
-      - workshops
-      - unconference
-      - opensearchcon2023-cfp
-    children:
-      -
-        label: 2024 - Stay Informed
-        url: /events/opensearchcon/
-      -
-        label: Sessions
-        url: /events/opensearchcon/sessions/
-      -
-        label: Speakers
-        url: /events/opensearchcon/speakers/
-      -
-        label: Exhibitors
-        url: /events/opensearchcon/exhibitors/
-      -
-        label: Workshops
-        url: /events/opensearchcon/workshops/
-      -
-        label: Unconference
-        url: /events/opensearchcon/unconference/
-      -
-        label: CFP is closed
-        url: /opensearchcon2023-cfp.html
-  -
     label: Download
     fragments:
       - downloads
       - versions
-    url: /downloads.html
+    url: https://eliatra.com/opensearch-enterprise-distro/
   -
     label: About
     url: /about.html
@@ -48,7 +16,7 @@ items:
     children:
       -
        label: Releases
-       url: /releases.html
+       url: https://eliatra.com/opensearch-enterprise-distro/
       -
        label: Roadmap
        url: https://github.com/orgs/opensearch-project/projects/1
@@ -58,76 +26,25 @@ items:
   -
     label: Community
     fragments:
-      - events
-      - community_projects
       - blog
       - partners
-      - slack
     children:
       -
         label: Blog
-        url: /blog
+        url: https://eliatra.com/blog/
       -
         label: Forum
-        url: https://forum.opensearch.org/
-      -
-        label: Slack
-        url: /slack.html
-      -
-        label: Events
-        url: /events
+        url: https://forum.eliatra.com
       -
         label: Partners
-        url: /partners
-      -
-        label: Projects
-        url: /community_projects
+        url: https://eliatra.com/company/
   -
     label: Documentation
-    fragments: 
-    - docs
-    - opensearch
-    - data-prepper
-    - clients
-    - benchmark
     url: /docs/latest/
     children:
       -
         label: OpenSearch and Dashboards
         url: /docs/latest/about/
-      -
-        label: Data Prepper
-        url: /docs/latest/data-prepper/
-      -
-        label: Clients
-        url: /docs/latest/clients/
-      -
-        label: Benchmark
-        url: /docs/latest/benchmark/
   -
     label: Platform
-    url: /platform/index.html
-    fragments: 
-      - platform
-      - search
-      - observability
-      - security-analytics
-      - vector-database
-      - benchmarks
-    children:
-      - label: Search
-        url: /platform/search/index.html
-      - label: Observability
-        url: /platform/observability/index.html
-      -
-        label: Security Analytics
-        url: /platform/security-analytics/index.html
-      -
-        label: Vector Database
-        url: /platform/search/vector-database.html
-      -
-        label: Playground Demo
-        url: https://playground.opensearch.org/
-      -
-        label: Performance Benchmarks
-        url: /benchmarks
+    url: https://opensearch.org/platform/index.html
