--- a/.github/workflows/publish_site.yml
+++ b/.github/workflows/publish_site.yml
@@ -3,7 +3,8 @@ name: Publish Website eoed-docs.eliatra.com
 on: 
   workflow_dispatch:
   push:
-    - 2.11.x-ee
+     branches:    
+     - 2.11.x-ee
   pull_request:
 
 env:
