--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Eliatra OpenSearch Enterprise Distro Documentation
+title: Eliatra OpenSearch Distro Documentation
 description: >- # this means to ignore newlines until "baseurl:"
-  Documentation for Eliatra OpenSearch Enterprise Distro Documentation
+  Documentation for Eliatra OpenSearch Distro Documentation
 baseurl: "/docs/latest" # the subpath of your site, e.g. /blog
 url: "https://opensearch.org" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:path/
