--- a/_config.yml
+++ b/_config.yml
@@ -241,7 +241,7 @@ search:
 
 # Google Analytics Tracking (optional)
 # e.g, UA-1234567-89
-ga_tracking: G-BQV14XK08F
+ga_tracking: GTM-T9SHSN9Q
 
 # Disable the just-the-docs theme anchor links in favor of our custom ones
 # See _includes/head_custom.html
